Starting Data Science Pipeline Development

--- a/notebooks/1 - Data Integration Pipeline.ipynb
+++ b/notebooks/1 - Data Integration Pipeline.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "impressive-humanity",
    "metadata": {},
    "outputs": [
@@ -18,19 +18,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-02-23 20:27:10,742 - kedro.io.data_catalog - INFO - Loading data from `params:project_path` (MemoryDataSet)...\n",
-      "2021-02-23 20:27:10,750 - kedro.io.data_catalog - INFO - Loading data from `params:tpn.server_ip` (MemoryDataSet)...\n",
-      "2021-02-23 20:27:10,752 - kedro.io.data_catalog - INFO - Loading data from `params:tpn.domain_name` (MemoryDataSet)...\n",
-      "2021-02-23 20:27:10,754 - kedro.io.data_catalog - INFO - Loading data from `params:tpn.shared_folder` (MemoryDataSet)...\n",
-      "2021-02-23 20:27:10,756 - kedro.io.data_catalog - INFO - Loading data from `params:sgs.base_path` (MemoryDataSet)...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/user01/.local/lib/python3.8/site-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
-      "  and should_run_async(code)\n"
+      "2021-02-24 18:07:39,819 - kedro.io.data_catalog - INFO - Loading data from `params:project_path` (MemoryDataSet)...\n",
+      "2021-02-24 18:07:39,822 - kedro.io.data_catalog - INFO - Loading data from `params:tpn.server_ip` (MemoryDataSet)...\n",
+      "2021-02-24 18:07:39,824 - kedro.io.data_catalog - INFO - Loading data from `params:tpn.domain_name` (MemoryDataSet)...\n",
+      "2021-02-24 18:07:39,825 - kedro.io.data_catalog - INFO - Loading data from `params:tpn.shared_folder` (MemoryDataSet)...\n",
+      "2021-02-24 18:07:39,829 - kedro.io.data_catalog - INFO - Loading data from `params:sgs.base_path` (MemoryDataSet)...\n"
      ]
     }
    ],
@@ -52,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "tutorial-newspaper",
    "metadata": {},
    "outputs": [
@@ -95,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "dominant-exclusion",
    "metadata": {},
    "outputs": [
@@ -103,14 +95,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-02-23 20:26:54,373 - SMB.SMBConnection - INFO - Authentication with remote machine \"//10.1.1.52/\" for user \"rodrigo_cunha\" will be using NTLM v2 authentication (with extended security)\n",
-      "2021-02-23 20:26:54,465 - SMB.SMBConnection - INFO - Now switching over to SMB2 protocol communication\n",
-      "2021-02-23 20:26:54,467 - SMB.SMBConnection - INFO - SMB2 dialect negotiation successful\n",
-      "2021-02-23 20:26:54,535 - SMB.SMBConnection - INFO - Performing NTLMv2 authentication (on SMB2) with server challenge \"b'fcd198f09e53fe82'\"\n",
-      "2021-02-23 20:26:54,536 - SMB.SMBConnection - INFO - Performing NTLMv2 authentication (on SMB2) with server challenge \"b'fcd198f09e53fe82'\"\n",
-      "2021-02-23 20:26:54,539 - SMB.SMBConnection - INFO - Server supports SMB signing\n",
-      "2021-02-23 20:26:54,541 - SMB.SMBConnection - INFO - SMB signing deactivated. SMB messages will NOT be signed.\n",
-      "2021-02-23 20:26:54,637 - SMB.SMBConnection - INFO - Authentication (on SMB2) successful!\n"
+      "2021-02-24 18:08:50,007 - SMB.SMBConnection - INFO - Authentication with remote machine \"//10.1.1.52/\" for user \"rodrigo_cunha\" will be using NTLM v2 authentication (with extended security)\n",
+      "2021-02-24 18:08:50,112 - SMB.SMBConnection - INFO - Now switching over to SMB2 protocol communication\n",
+      "2021-02-24 18:08:50,114 - SMB.SMBConnection - INFO - SMB2 dialect negotiation successful\n",
+      "2021-02-24 18:08:50,180 - SMB.SMBConnection - INFO - Performing NTLMv2 authentication (on SMB2) with server challenge \"b'cb2d1b4854b57cac'\"\n",
+      "2021-02-24 18:08:50,182 - SMB.SMBConnection - INFO - Performing NTLMv2 authentication (on SMB2) with server challenge \"b'cb2d1b4854b57cac'\"\n",
+      "2021-02-24 18:08:50,186 - SMB.SMBConnection - INFO - Server supports SMB signing\n",
+      "2021-02-24 18:08:50,187 - SMB.SMBConnection - INFO - SMB signing deactivated. SMB messages will NOT be signed.\n",
+      "2021-02-24 18:08:50,248 - SMB.SMBConnection - INFO - Authentication (on SMB2) successful!\n"
      ]
     },
     {
@@ -316,7 +308,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,6 +316,9 @@
    "source": [
     "# Importing class to retrievee data from TPN File Server.\n",
     "from kedro_mlflow_tutorial.utils.tpn import TPNFileServer\n",
+    "import logging\n",
+    "\n",
+    "logging.getLogger(\"TPNFileServer\").setLevel(logging.WARNING)\n",
     "\n",
     "tpn_client = TPNFileServer(\n",
     "    credentials['tpn']['username'],\n",
